홈화면추가, 라우터수정 등

--- a/src/styles/navi.css
+++ b/src/styles/navi.css
@@ -5,8 +5,9 @@
     left: 0;
     min-height: 100vh !important;
     z-index: 100;
-    padding: 48px 0 0;
+    padding: 48px 20px 0;
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+    background-color: #eaeaed;
 }
 #sidebar-wrapper{
     min-height: 100vh !important;
